x-bonus-module/istio/myweb.yaml
---
###################################################
# Service: myweb
###################################################
apiVersion: v1
kind: Service
metadata:
  name: myweb
  labels:
    app: myweb
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: myweb
---
###################################################
# Deployment: myweb
###################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb
  labels:
    app: myweb
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myweb
      version: v1
  template:
    metadata:
      labels:
        app: myweb
        version: v1
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/
        ports:
        - containerPort: 80
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
